--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -17,7 +17,7 @@ theme-override: assets/css/PITCHME.css
 # Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : assets/img/logo.png
+logo : assets/img/kg_logo.png
 logo-postion : top-left
 
 #
