--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -31,6 +31,7 @@ layout : center
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
 footnote : "Datadog introduction"
+background-color : "#fed551"
 
 #
 # Published Setting
